--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Oxanium:wght@200..800&display=swap');
 
-/* Regras básicas e globais */
-html, body {
-    /* overflow: hidden; */ /* ❌ REMOVIDO - Causava problemas em mobile */
-}
-
 html {
     /* Define o tamanho da fonte do elemento raiz para que seja responsiva */
     font-size: calc(8px + 0.52vw); 
@@ -17,40 +12,35 @@ html {
     font-family: 'Oxanium', cursive;
 }
 
-body {
-    text-align: center;
-    background: linear-gradient(to bottom, #6d6e70, #202020);
-    min-height: 100vh;
-}
-
 main {
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    padding: 20px;
+    text-align: center;
 }
 
 .pokedex-body {
-    width: 90vw;
-    max-width: 900px;
-    aspect-ratio: 840/639; /* ✅ ADICIONADO - Mantém proporção correta */
+    --pokedex-width: min(950px, 90vw);
+
+    width: var(--pokedex-width);
+    aspect-ratio: 840/639; /* Mantém proporção correta */
     position: relative;
     background-image: url(../images/pokedex.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    /* ✅ MELHORADO - Variáveis para largura E altura */
-    --pokedex-width: min(900px, 90vw);
+
+    /* Variáveis para largura e altura */
     --pokedex-height: calc(var(--pokedex-width) * 639 / 840);
 }
 
 .pokemon-container {
     position: absolute;
-    top: calc(var(--pokedex-height) * 0.31); /* ✅ CORRIGIDO - Usa altura */
+    top: calc(var(--pokedex-height) * 0.31); 
     left: calc(var(--pokedex-width) * 0.115);
     width: calc(var(--pokedex-width) * 0.31);
-    height: calc(var(--pokedex-height) * 0.31); /* ✅ ADICIONADO - Altura fixa */
+    height: calc(var(--pokedex-height) * 0.31);
     background-image: url(../images/FundoPadrao.png);
     background-size: contain;
     background-position: center;
@@ -60,9 +50,9 @@ main {
 
 .pokemon-image {
     position: absolute;
-    top: 57%; /* ✅ SIMPLIFICADO - Centralizado */
+    top: 57%; 
     left: 50%;
-    transform: translate(-50%, -50%); /* ✅ ADICIONADO - Centralização perfeita */
+    transform: translate(-50%, -50%);
     height: 80%;
     animation: mover 1.5s infinite ease-in-out 0.5s;
     will-change: transform;
@@ -79,10 +69,10 @@ main {
 
 @keyframes mover {
     0%, 100% {
-        transform: translate(-50%, -50%); /* ✅ CORRIGIDO - Mantém centralização */
+        transform: translate(-50%, -50%); 
     }
     50% {
-        transform: translate(-53%, -56%); /* ✅ AJUSTADO */
+        transform: translate(-53%, -56%); 
     } 
 }
 
@@ -96,10 +86,10 @@ main {
 .poke-bg1 {
     position: absolute;
     background-color: #d30a40;
-    top: calc(var(--pokedex-height) * 0.6932); /* ✅ CORRIGIDO - Usa altura */
+    top: calc(var(--pokedex-height) * 0.6932); 
     left: calc(var(--pokedex-width) * 0.085); 
     width: calc(var(--pokedex-width) * 0.38); 
-    height: calc(var(--pokedex-height) * 0.205); /* ✅ CORRIGIDO */
+    height: calc(var(--pokedex-height) * 0.205); 
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -109,10 +99,10 @@ main {
 .poke-bg2 {
     position: absolute;
     background-color: #d30a40;
-    top: calc(var(--pokedex-height) * 0.34); /* ✅ CORRIGIDO - Usa altura */
+    top: calc(var(--pokedex-height) * 0.34); 
     right: calc(var(--pokedex-width) * 0.057); 
     width: calc(var(--pokedex-width) * 0.36); 
-    height: calc(var(--pokedex-height) * 0.57); /* ✅ CORRIGIDO */
+    height: calc(var(--pokedex-height) * 0.57); 
 }
 
 form{
@@ -122,11 +112,13 @@ form{
 .entry{
     width: 85%;
     padding: 3%;
-    font-size: clamp(0.7rem, 2.5vw, 1rem); /* ✅ RESPONSIVO */
+    font-size: clamp(0.7rem, 2.5vw, 1rem);
     border-radius: 5px;
     border-color: black;
     font-weight: 600;
-    box-shadow: -3px 3px 0px rgb(121, 118, 118), -4px 4px 0px rgb(0, 0, 0), -2px 4px 0px rgb(0, 0, 0);
+    box-shadow: calc(var(--pokedex-width) * -0.003) calc(var(--pokedex-width) * 0.003) 0px rgb(121, 118, 118), 
+    calc(var(--pokedex-width) * -0.004) calc(var(--pokedex-width) * 0.004) 0px rgb(0, 0, 0), 
+    calc(var(--pokedex-width) * -0.002) calc(var(--pokedex-width) * 0.003) 0px rgb(0, 0, 0);
 }
 
 .entry::placeholder{
@@ -145,15 +137,18 @@ form{
     width: 35%;
     height: calc(var(--pokedex-height) * 0.075);
     margin-top: 2%;
-    font-size: clamp(0.8rem, 2vw, 1.5rem); /* ✅ RESPONSIVO */
+    font-size: clamp(0.8rem, 2vw, 1.5rem);
     border-radius: 5px;
     border-color: black;
     font-weight: 600;
-    box-shadow: -3px 3px 0px rgb(121, 118, 118), -4px 4px 0px rgb(0, 0, 0), -2px 4px 0px rgb(0, 0, 0);
+    box-shadow: 
+        calc(var(--pokedex-width) * -0.003) calc(var(--pokedex-width) * 0.003) 0px rgb(121, 118, 118), 
+        calc(var(--pokedex-width) * -0.004) calc(var(--pokedex-width) * 0.004) 0px rgb(0, 0, 0), 
+        calc(var(--pokedex-width) * -0.002) calc(var(--pokedex-width) * 0.004) 0px rgb(0, 0, 0);
 }
 
 .btn-arrows:active{
-    box-shadow: inset 2px 2px 0px rgba(0, 0, 0, 0.6); 
+    box-shadow: inset calc(var(--pokedex-width) * 0.002) calc(var(--pokedex-width) * 0.002) 0px rgba(0, 0, 0, 0.6); 
 }
 
 .btn-arrows img {
@@ -180,10 +175,12 @@ form{
     width: 96%;
     height: 45%;
     border-style: solid;
-    border-width: 2px ;
-    border-radius: 10px;
+    border-width: calc(var(--pokedex-width) * 0.002);
+    border-radius: calc(var(--pokedex-width) * 0.01);
     border-color: black;
-    box-shadow: -3px 3px 0px rgb(121, 118, 118), -4px 4px 0px rgb(0, 0, 0), -2px 4px 0px rgb(0, 0, 0);
+    box-shadow: calc(var(--pokedex-width) * -0.003) calc(var(--pokedex-width) * 0.003) 0px rgb(121, 118, 118), 
+    calc(var(--pokedex-width) * -0.004) calc(var(--pokedex-width) * 0.004) 0px rgb(0, 0, 0), 
+    calc(var(--pokedex-width) * -0.002) calc(var(--pokedex-width) * 0.002) 0px rgb(0, 0, 0);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -191,7 +188,7 @@ form{
 
 .poke-name{
     margin-top: 3%;
-    font-size: clamp(0.8rem, 3vw, 1.2rem); /* ✅ RESPONSIVO */
+    font-size: clamp(0.8rem, 3vw, 1.2rem);
     color: rgb(121, 118, 118);
     font-weight: 600;
 }
@@ -220,8 +217,8 @@ form{
 }
 
 .status-pt2 .stat-name{
-    width: 42%; /* ✅ CORRIGIDO - Era 42% fixo */
-    font-size: clamp(0.6rem, 2vw, 0.96rem); /* ✅ RESPONSIVO */
+    width: 42%;
+    font-size: clamp(0.6rem, 2vw, 0.96rem); 
 }
 
 .status-container{
@@ -248,12 +245,12 @@ form{
 
 .stat-name{
     width: 20%;
-    font-size: clamp(0.6rem, 2vw, 1rem); /* ✅ RESPONSIVO */
+    font-size: clamp(0.6rem, 2vw, 1rem); 
 }
 
 .stat-value{
     width: 24%;
-    font-size: clamp(0.6rem, 2vw, 1rem); /* ✅ RESPONSIVO */
+    font-size: clamp(0.6rem, 2vw, 1rem); 
 }
 
 .types-painel{
@@ -262,10 +259,12 @@ form{
     width: 96%;
     height: 45%;
     border-style: solid;
-    border-width: 2px ;
-    border-radius: 10px;
+    border-width: calc(var(--pokedex-width) * 0.002);
+    border-radius: calc(var(--pokedex-width) * 0.01);
     border-color: black;
-    box-shadow: -3px 3px 0px rgb(121, 118, 118), -4px 4px 0px rgb(0, 0, 0), -2px 4px 0px rgb(0, 0, 0);
+    box-shadow: calc(var(--pokedex-width) * -0.003) calc(var(--pokedex-width) * 0.003) 0px rgb(121, 118, 118), 
+    calc(var(--pokedex-width) * -0.004) calc(var(--pokedex-width) * 0.004) 0px rgb(0, 0, 0), 
+    calc(var(--pokedex-width) * -0.002) calc(var(--pokedex-width) * 0.002) 0px rgb(0, 0, 0);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -294,14 +293,14 @@ form{
 }
 
 .info{
-    font-size: clamp(0.8rem, 2.5vw, 1.2rem); /* ✅ RESPONSIVO */
+    font-size: clamp(0.8rem, 2.5vw, 1.2rem);
     color: rgb(121, 118, 118);
     font-weight: 700;
 }
 
 .poke-height{
     margin-top: 1%;
-    font-size: clamp(0.8rem, 2.5vw, 1.2rem); /* ✅ RESPONSIVO */
+    font-size: clamp(0.8rem, 2.5vw, 1.2rem);
     color: rgb(121, 118, 118);
     font-weight: 400;
     
@@ -309,21 +308,33 @@ form{
 
 .poke-weight{
     margin-top: 1%;
-    font-size: clamp(0.8rem, 2.5vw, 1.2rem); /* ✅ RESPONSIVO */
+    font-size: clamp(0.8rem, 2.5vw, 1.2rem);
     color: rgb(121, 118, 118);
     font-weight: 400;
 }
 
 .poke-desc{
     margin-top: 3.5%;
-    font-size: clamp(0.7rem, 2vw, 1rem); /* ✅ RESPONSIVO */
+    font-size: clamp(0.7rem, 2vw, 1rem);
     font-weight: 300;
     width: 95%;
 }
 
-@media (max-width: 550px) {
+
+@media (max-width: 700px) {
     html {
-        font-size: calc(6px + 0.3vw);
+        font-size: calc(9px + 0.3vw);
     }
 }
 
+@media (max-width: 600px) {
+    html {
+        font-size: calc(8px + 0.3vw);
+    }
+}
+
+@media (max-width: 500px) {
+    html {
+        font-size: calc(5px + 0.3vw);
+    }
+}
